--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.5",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
