--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
     "immutable": "^4.0.0-rc.12",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-intl": "^4.5.3",
